@@ -1,3 +1,7 @@
+2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b1
+
+	* Change: Check POST vars for $include before resetting to 'albums.php'
+
 2004-07-10  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC1
 
 	* v1.4.4 Release Candidate 1
